@@ -1,5 +1,10 @@
 2007-12-31  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm: Support for border-style properties, as a model case
+	for shorthand properties.
+
+2007-12-31  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm: Ignore property which is not supported by the
 	application.  Support for properties with a keyword being
 	able to be specified is added.
